changes in the home tab

--- a/about.html
+++ b/about.html
@@ -149,9 +149,10 @@
                 <div class="col-lg-7">
                     <div class="text-left mb-4">
                         <h5 class="text-primary text-uppercase mb-3" style="letter-spacing: 5px;">About Us</h5>
-                        <h1>Innovative Way To Learn</h1>
+                        <h1>Welcome to Abbott Home Tuitions!    </h1>
                     </div>
-                    <p>At Abbot Home Tuition, we're revolutionizing the way students learn in Abbottabad. Since our establishment, we've been committed to bringing quality education directly to your doorstep, making learning more accessible, personalized, and effective than ever before.</p>
+                    <p>At Abbott Home Tuitions, we're here to revolutionize home learning by providing personalized, one-on-one tuition in the comfort of your home. We connect students with top-tier tutors for a unique, engaging learning experience designed to help students excel in their studies and beyond.
+                        Whether you're preparing for your exams or want to learn something new, we offer a wide range of subjects, from traditional school subjects to specialized courses like HTML, C programming, Quranic studies, and IELTS preparation.</p>
                     <a href="" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold mt-2">Learn More</a>
                 </div>
             </div>
@@ -225,23 +226,23 @@
                         <div class="text-center">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
                             <h4 class="font-weight-normal mb-4">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos. Rebum elitr dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam</h4>
-                            <img class="img-fluid mx-auto mb-3" src="img/testimonial-1.jpg" alt="">
-                            <h5 class="m-0">Client Name</h5>
-                            <span>Profession</span>
+                            <img class="img-fluid mx-auto mb-3" src="img/amir2.jpg" alt="">
+                            <h5 class="m-0">Amir Ali Shah</h5>
+                            <span>CS Student</span>
                         </div>
                         <div class="text-center">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
                             <h4 class="font-weight-normal mb-4">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos. Rebum elitr dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam</h4>
-                            <img class="img-fluid mx-auto mb-3" src="img/testimonial-2.jpg" alt="">
-                            <h5 class="m-0">Client Name</h5>
-                            <span>Profession</span>
+                            <img class="img-fluid mx-auto mb-3" src="img/amir2.jpg" alt="">
+                            <h5 class="m-0">Amir Ali Shah</h5>
+                            <span>CS Student</span>
                         </div>
                         <div class="text-center">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
                             <h4 class="font-weight-normal mb-4">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos. Rebum elitr dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam</h4>
-                            <img class="img-fluid mx-auto mb-3" src="img/testimonial-3.jpg" alt="">
-                            <h5 class="m-0">Client Name</h5>
-                            <span>Profession</span>
+                            <img class="img-fluid mx-auto mb-3" src="img/amir2.jpg" alt="">
+                            <h5 class="m-0">Amir Ali Shah</h5>
+                            <span>CS Student</span>
                         </div>
                     </div>
                 </div>
@@ -259,13 +260,13 @@
                     <div class="col-md-6 mb-5">
                         <h5 class="text-primary text-uppercase mb-4" style="letter-spacing: 5px;">Get In Touch</h5>
                         <p><i class="fa fa-map-marker-alt mr-2"></i>123 Street, New York, USA</p>
-                        <p><i class="fa fa-phone-alt mr-2"></i>+012 345 67890</p>
-                        <p><i class="fa fa-envelope mr-2"></i>info@example.com</p>
+                        <p><i class="fa fa-phone-alt mr-2"></i>+92 3105894558</p>
+                        <p><i class="fa fa-envelope mr-2"></i>abbothometuitions@gmail.com</p>
                         <div class="d-flex justify-content-start mt-4">
-                            <a class="btn btn-outline-light btn-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-outline-light btn-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-square mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                            <a class="btn btn-outline-light btn-square" href="#"><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-outline-light btn-square mr-2" href="https://whatsapp.com/channel/0029Vaowr1oDuMRnqFCS6i1i"><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-outline-light btn-square mr-2" href="https://whatsapp.com/channel/0029Vaowr1oDuMRnqFCS6i1i"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-outline-light btn-square mr-2" href="https://whatsapp.com/channel/0029Vaowr1oDuMRnqFCS6i1i"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-outline-light btn-square" href="https://whatsapp.com/channel/0029Vaowr1oDuMRnqFCS6i1i"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                     <div class="col-md-6 mb-5">
